[tool.poetry]
name = "cipher_ja3549"
version = "0.1.0"
description = "A package that has cipher function that will encrypt/decrpyt strings."
authors = ["Jaysang Ahn"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
